--- a/assets/style.css
+++ b/assets/style.css
@@ -85,7 +85,7 @@ body {
 
 .nav-pills .nav-link.active {
     color: #fff;
-    background-color: #BEB45A;
+    background-color: #7C752A;
 }
 
 .nav-pills .nav-link {
